--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ GitHub: <a href="https://github.com/ccding" target="_blank">https://github.com/c
 </li>
 <li>
 LinkedIn: <a href="https://www.linkedin.com/in/ccding/" target="_blank">https://www.linkedin.com/in/ccding/</a>
+          <a href="papers/EP2924620B1.pdf" target="_blank"> </a>
 </li>
 </ul>
 
